--- a/dotnet/src/SEALNet.csproj.in
+++ b/dotnet/src/SEALNet.csproj.in
@@ -10,7 +10,7 @@
     <AssemblyOriginatorKeyFile Condition="'$(OS)' == 'Windows_NT' And '$(SEALNetSigningCertificate)' != ''">SEALNetCert.snk</AssemblyOriginatorKeyFile>
     <DelaySign Condition="'$(OS)' == 'Windows_NT' And '$(SEALNetSigningCertificate)' != ''">true</DelaySign>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Platform)'=='AnyCPU'">
+  <PropertyGroup>
     <DocumentationFile>@CMAKE_RUNTIME_OUTPUT_DIRECTORY@\dotnet\$(Configuration)/SEALNet.xml</DocumentationFile>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>@CMAKE_RUNTIME_OUTPUT_DIRECTORY@\dotnet\$(Configuration)</OutputPath>
@@ -20,11 +20,11 @@
     <DocumentationFile>@CMAKE_RUNTIME_OUTPUT_DIRECTORY@\dotnet\ios\$(Configuration)\SEALNet.xml</DocumentationFile>
     <OutputPath>@CMAKE_RUNTIME_OUTPUT_DIRECTORY@\dotnet\ios\$(Configuration)</OutputPath>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <DebugType>pdbonly</DebugType>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
     <DefineConstants>$(DefineConstants);DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
 </Project>
