--- a/dotnet/tests/SEALNetTest.csproj.in
+++ b/dotnet/tests/SEALNetTest.csproj.in
@@ -9,7 +9,7 @@
     <Copyright>Microsoft Corporation 2020</Copyright>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Platform)'=='AnyCPU'">
+  <PropertyGroup>
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>@CMAKE_RUNTIME_OUTPUT_DIRECTORY@/dotnet/$(Configuration)</OutputPath>
   </PropertyGroup>
