--- a/dotnet/nuget/SEALNet.nuspec.in
+++ b/dotnet/nuget/SEALNet.nuspec.in
@@ -26,8 +26,8 @@
     <file src="@NUGET_WINDOWS_SEAL_C_PATH@" target="runtimes/win10-x64" />
     <file src="@NUGET_LINUX_SEAL_C_PATH@" target="runtimes/linux-x64" />
     <file src="@NUGET_MACOS_SEAL_C_PATH@" target="runtimes/macos-x64" />
-    <file src="../../build/bin/dotnet/$configuration$/netstandard2.0/SEALNet.dll" target="lib/netstandard2.0/" />
-    <file src="../../build/bin/dotnet/$configuration$/SEALNet.xml" target="lib/netstandard2.0/" />
+    <file src="@CMAKE_RUNTIME_OUTPUT_DIRECTORY@/dotnet/$configuration$/netstandard2.0/SEALNet.dll" target="lib/netstandard2.0/" />
+    <file src="@CMAKE_RUNTIME_OUTPUT_DIRECTORY@/dotnet/$configuration$/SEALNet.xml" target="lib/netstandard2.0/" />
     <file src="../../LICENSE" target="LICENSE" />
   </files>
 </package>
