Enable intrinsics in command line for Android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -18,7 +18,14 @@ android {
                 cppFlags ""
                 arguments "-DSEAL_BUILD_SEAL_C=1",
                           "-DSEAL_USE_INTRIN=1",
-                          "-C", "$rootDir/../cmake/intrinsics.arm64.cmake"
+                          "-DSEAL_ARM64_EXITCODE=0",
+                          "-DSEAL_ARM64_EXITCODE__TRYRUN_OUTPUT=''",
+                          "-DSEAL___BUILTIN_CLZLL_FOUND_EXITCODE=0",
+                          "-DSEAL___BUILTIN_CLZLL_FOUND_EXITCODE__TRYRUN_OUTPUT=''",
+                          "-DSEAL__ADDCARRY_U64_FOUND_EXITCODE=0",
+                          "-DSEAL__ADDCARRY_U64_FOUND_EXITCODE__TRYRUN_OUTPUT=''",
+                          "-DSEAL__SUBBORROW_U64_FOUND_EXITCODE=0",
+                          "-DSEAL__SUBBORROW_U64_FOUND_EXITCODE__TRYRUN_OUTPUT=''"
             }
         }
         ndk {
