--- a/cmake/SEALConfig.cmake.in
+++ b/cmake/SEALConfig.cmake.in
@@ -15,8 +15,8 @@
 #   SEAL_DEBUG : Set to non-zero value if library is compiled with extra debugging code (very slow!)
 #   SEAL_BUILD_TYPE : The build type (e.g., "Release" or "Debug")
 #   SEAL_USE_CXX17 : Set to non-zero value if library is compiled as C++17 instead of C++14
-#   SEAL_ENFORCE_HE_STD_SECURITY : Set to non-zero value if library is compiled to enforce at least
-#       a 128-bit security level based on HomomorphicEncryption.org security estimates
+#   SEAL_THROW_ON_TRANSPARENT_CIPHERTEXT : Set to non-zero value if library is compiled with
+#       SEAL_THROW_ON_TRANSPARENT_CIPHERTEXT enabled
 #   SEAL_USE_MSGSL : Set to non-zero value if library is compiled with Microsoft GSL support
 #   SEAL_USE_ZLIB : Set to non-zero value if library is compiled with ZLIB support
 #   SEAL_USE_ZSTD : Set to non-zero value if library is compiled with Zstandard support
@@ -49,7 +49,7 @@ set(SEAL_VERSION_PATCH @SEAL_VERSION_PATCH@)
 set(SEAL_BUILD_TYPE @CMAKE_BUILD_TYPE@)
 set(SEAL_DEBUG @SEAL_DEBUG@)
 set(SEAL_USE_CXX17 @SEAL_USE_CXX17@)
-set(SEAL_ENFORCE_HE_STD_SECURITY @SEAL_ENFORCE_HE_STD_SECURITY@)
+set(SEAL_THROW_ON_TRANSPARENT_CIPHERTEXT @SEAL_THROW_ON_TRANSPARENT_CIPHERTEXT@)
 
 set(SEAL_USE_MSGSL @SEAL_USE_MSGSL@)
 set(SEAL_USE_ZLIB @SEAL_USE_ZLIB@)
