Minor edits to README.md, CHANGES.md, and .gitignore to decorate PR #306. Re-formatted header/source files.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ dotnet/examples/SEALNetExamples.csproj
 CMakeSettings.json
 .vscode
 
+# WebAssembly Output
+seal_wasm.js
+seal_wasm.wasm
+
 # Build
 bin/
 lib/
