feat: add link flags to build the benchmark for wasm

--- a/native/bench/CMakeLists.txt
+++ b/native/bench/CMakeLists.txt
@@ -42,6 +42,10 @@ if(SEAL_BUILD_BENCH)
     endif()
 
     add_executable(sealbench)
+    # If we're targeting WASM, add the appropriate link flags
+    if(EMSCRIPTEN)
+        set_target_properties(sealbench PROPERTIES LINK_FLAGS "-flto -O3 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s MAXIMUM_MEMORY=4GB")
+    endif()
     target_sources(sealbench
         PRIVATE
             ${CMAKE_CURRENT_LIST_DIR}/bench.cpp
