Renamed SEAL_USE_ALIGN_64 to SEAL_USE_ALIGNED_ALLOC and added as an option that depends on SEAL_USE_CXX17.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -348,6 +348,17 @@ if(NOT SEAL_EXPLICIT_MEMSET_FOUND)
 endif()
 message(STATUS "SEAL_USE_EXPLICIT_MEMSET: ${SEAL_USE_EXPLICIT_MEMSET}")
 
+# [option] SEAL_USE_ALIGNED_ALLOC (default: ON, advanced)
+# Not available if SEAL_USE_CXX17 is OFF.
+# Use 64-byte aligned malloc if available, set of OFF otherwise
+if(MSVC)
+    set(SEAL_USE_ALIGNED_ALLOC_OPTION_STR "Use _aligned_malloc")
+else()
+    set(SEAL_USE_ALIGNED_ALLOC_OPTION_STR "Use std:aligned_alloc")
+endif()
+cmake_dependent_option(SEAL_USE_ALIGNED_ALLOC ${SEAL_USE_ALIGNED_ALLOC_OPTION_STR} ON "SEAL_USE_CXX17" OFF)
+mark_as_advanced(FORCE SEAL_USE_ALIGNED_ALLOC)
+
 # Add source files to library and header files to install
 set(SEAL_SOURCE_FILES "")
 add_subdirectory(native/src/seal)
