--- a/native/src/seal/util/config.h.in
+++ b/native/src/seal/util/config.h.in
@@ -13,7 +13,7 @@
 
 // C++17 features
 #cmakedefine SEAL_USE_STD_BYTE
-#cmakedefine SEAL_USE_ALIGN_64
+#cmakedefine SEAL_USE_ALIGNED_ALLOC
 #cmakedefine SEAL_USE_SHARED_MUTEX
 #cmakedefine SEAL_USE_IF_CONSTEXPR
 #cmakedefine SEAL_USE_MAYBE_UNUSED
