Ignore Android Studio's .idea directory

--- a/.gitignore
+++ b/.gitignore
@@ -264,6 +264,7 @@ gradle-app.setting
 .gradletasknamecache
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+android/.idea/
 
 #### Visual Studio Code ####
 .vscode/*
