Ignore everying in .vscode directory.

--- a/.gitignore
+++ b/.gitignore
@@ -268,10 +268,10 @@ android/.idea/
 
 #### Visual Studio Code ####
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+#!.vscode/settings.json
+#!.vscode/tasks.json
+#!.vscode/launch.json
+#!.vscode/extensions.json
 *.code-workspace
 # Local History for Visual Studio Code
 .history/
