--- a/pipelines/android.yml
+++ b/pipelines/android.yml
@@ -1,4 +1,18 @@
 steps:
+- task: PowerShell@2
+  displayName: Install CMake 3.18.6
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Download specific version of CMake
+      $ToolsDirectory = Join-Path -Path $Env:BUILD_SOURCESDIRECTORY -ChildPath tools
+      $CMakeZipFile = Join-Path $ToolsDirectory -ChildPath cmake.zip
+
+      Invoke-WebRequest -Uri "https://cmake.org/files/v3.18/cmake-3.18.6-win64-x64.zip" -OutFile $CMakeZipFile
+      New-Item -Path $ToolsDirectory -Name "cmake" -ItemType "directory"
+      Expand-Archive -Path $CMakeZipFile -DestinationPath $ToolsDirectory/cmake
+      Copy-Item -Path $ToolsDirectory/cmake/cmake-3.18.6-win64-x64/* -Destination "c:/Program Files/CMake" -Recurse -Force
+
 - task: CMake@1
   displayName: Verify CMake version
   inputs:
@@ -17,38 +31,46 @@ steps:
 
       Invoke-WebRequest -Uri "https://github.com/ninja-build/ninja/releases/download/v1.10.0/ninja-win.zip" -OutFile $NinjaZipFile
       Expand-Archive -Path $NinjaZipFile -DestinationPath $ToolsDirectory
-      Copy-Item -Path $NinjaExeFile -Destination "c:\Program Files\CMake\bin"
+      Copy-Item -Path $NinjaExeFile -Destination "c:/Program Files/CMake/bin"
 
 - task: CmdLine@2
   displayName: Update NDK
   inputs:
     script: |
-      echo Android home: %ANDROID_HOME%
-      "%ANDROID_HOME%/tools/bin/sdkmanager.bat" --install ndk;21.0.6113669
+      echo Android home: %ANDROID_SDK_ROOT%
+      "%ANDROID_SDK_ROOT%/tools/bin/sdkmanager" --install "ndk;22.1.7171670"
 
 - task: Gradle@2
   displayName: Compile Android Native Libraries
   inputs:
-    workingDirectory: '$(Build.SourcesDirectory)\android'
-    gradleWrapperFile: '$(Build.SourcesDirectory)\android\gradlew'
+    workingDirectory: '$(Build.SourcesDirectory)/android'
+    gradleWrapperFile: '$(Build.SourcesDirectory)/android/gradlew'
     gradleOptions: ''
+    options: '--stacktrace --no-parallel'
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'compileReleaseSources'
 
-- task: CopyFiles@2
-  displayName: Copy files to staging directory
-  inputs:
-    SourceFolder: '$(Build.SourcesDirectory)\android\app\.cxx\cmake\release\arm64-v8a\lib\arm64-v8a'
-    Contents: 'libsealc.so'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)\lib\arm64-v8a'
+#- task: CmdLine@2
+#  displayName: Compile Android Native Libraries
+#  inputs:
+#    script: |
+#      gradlew.bat --stacktrace --no-parallel compileReleaseSources
+#    workingDirectory: $(Build.SourcesDirectory)/android
 
 - task: CopyFiles@2
   displayName: Copy files to staging directory
   inputs:
-    SourceFolder: '$(Build.SourcesDirectory)\android\app\.cxx\cmake\release\x86_64\lib\x86_64'
+    SourceFolder: '$(Build.SourcesDirectory)/android/app/.cxx/cmake/release/arm64-v8a/lib/arm64-v8a'
     Contents: 'libsealc.so'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)\lib\x86_64'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)/lib/arm64-v8a'
+
+- task: CopyFiles@2
+  displayName: Copy files to staging directory
+  inputs:
+    SourceFolder: '$(Build.SourcesDirectory)/android/app/.cxx/cmake/release/x86_64/lib/x86_64'
+    Contents: 'libsealc.so'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)/lib/x86_64'
 
 - task: PublishBuildArtifacts@1
   displayName: Publish build artifacts
