--- a/pipelines/jobs.yml
+++ b/pipelines/jobs.yml
@@ -8,6 +8,8 @@ jobs:
 - ${{ if eq(parameters.name, 'Windows') }}:
   - job: ${{ parameters.name }}
     displayName: ${{ parameters.name }}
+    ${{ if eq(parameters.debug, 'false') }}:
+      timeoutInMinutes: 0
     pool:
       vmImage: 'windows-latest'
     steps:
