Fixed a missing dependency on HEXL in pkg-config.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -579,18 +579,20 @@ export(
     NAMESPACE SEAL::
     FILE ${SEAL_TARGETS_FILENAME})
 
-# Install MSGSL header files if SEAL_BUILD_DEPS is ON
-if(SEAL_USE_MSGSL AND SEAL_BUILD_DEPS)
-    install(
-        DIRECTORY ${msgsl_SOURCE_DIR}/include/gsl
-        DESTINATION ${SEAL_INCLUDES_INSTALL_DIR})
-endif()
-
-# Install Intel HEXL header files if SEAL_BUILD_DEPS is ON
-if(SEAL_USE_INTEL_HEXL AND SEAL_BUILD_DEPS)
-    install(
-        DIRECTORY ${hexl_SOURCE_DIR}/hexl/include/hexl
-        DESTINATION ${SEAL_INCLUDES_INSTALL_DIR})
+# Install header files of dependencies if SEAL_BUILD_DEPS is ON
+if(SEAL_BUILD_DEPS)
+    # MSGSL
+    if(SEAL_USE_MSGSL)
+        install(
+            DIRECTORY ${msgsl_SOURCE_DIR}/include/gsl
+            DESTINATION ${SEAL_INCLUDES_INSTALL_DIR})
+    endif()
+    # Intel HEXL
+    if(SEAL_USE_INTEL_HEXL)
+        install(
+            DIRECTORY ${hexl_SOURCE_DIR}/hexl/include/hexl
+            DESTINATION ${SEAL_INCLUDES_INSTALL_DIR})
+    endif()
 endif()
 
 ##############
@@ -598,24 +600,30 @@ endif()
 ##############
 
 if(UNIX OR APPLE)
-    # Set the requirements according to the current configuration
-    if(SEAL_USE_MSGSL AND NOT SEAL_BUILD_DEPS)
-        # Extract the include directories from Microsoft.GSL::GSL
-        get_target_property(
-            SEAL_PKGCONFIG_MSGSL_INCLUDE_DIR
-            Microsoft.GSL::GSL
-            INTERFACE_INCLUDE_DIRECTORIES)
+    # Set the requirements according to the current configuration if SEAL_BUILD_DEPS=OFF
+    if(NOT SEAL_BUILD_DEPS)
+        if(SEAL_USE_MSGSL)
+            # Extract the include directories from Microsoft.GSL::GSL
+            get_target_property(
+                SEAL_PKGCONFIG_MSGSL_INCLUDE_DIR
+                Microsoft.GSL::GSL
+                INTERFACE_INCLUDE_DIRECTORIES)
 
-        # Create the Microsoft GSL pkg-config file
-        configure_file(${SEAL_PKGCONFIG_MSGSL_IN_FILENAME} ${SEAL_PKGCONFIG_MSGSL_FILENAME} @ONLY)
+            # Create the Microsoft GSL pkg-config file
+            configure_file(${SEAL_PKGCONFIG_MSGSL_IN_FILENAME} ${SEAL_PKGCONFIG_MSGSL_FILENAME} @ONLY)
 
-        set(SEAL_PKGCONFIG_MSGSL_REQUIRES_STRING "seal_msgsl >= ${Microsoft.GSL_VERSION_MAJOR}")
-    endif()
-    if(SEAL_USE_ZLIB AND NOT SEAL_BUILD_DEPS)
-        set(SEAL_PKGCONFIG_ZLIB_REQUIRES_STRING "zlib = ${ZLIB_VERSION_STRING}")
-    endif()
-    if(SEAL_USE_ZSTD AND NOT SEAL_BUILD_DEPS)
-        set(SEAL_PKGCONFIG_ZSTD_REQUIRES_STRING "libzstd >= ${zstd_VERSION_MAJOR}")
+            set(SEAL_PKGCONFIG_MSGSL_REQUIRES_STRING "seal_msgsl >= ${Microsoft.GSL_VERSION_MAJOR}")
+        endif()
+        if(SEAL_USE_ZLIB)
+            set(SEAL_PKGCONFIG_ZLIB_REQUIRES_STRING "zlib = ${ZLIB_VERSION_STRING}")
+        endif()
+        if(SEAL_USE_ZSTD)
+            set(SEAL_PKGCONFIG_ZSTD_REQUIRES_STRING "libzstd >= ${zstd_VERSION_MAJOR}")
+        endif()
+        if(SEAL_USE_INTEL_HEXL)
+            set(SEAL_PKGCONFIG_INTEL_HEXL_REQUIRES_STRING "HEXL >= ${HEXL_VERSION_MAJOR}")
+            message(STATUS "Intel HEXL does not have a pkg-config file")
+        endif()
     endif()
 
     # Create the pkg-config file
