--- a/native/bench/CMakeLists.txt
+++ b/native/bench/CMakeLists.txt
@@ -59,6 +59,7 @@ if(SEAL_BUILD_BENCH)
             ${CMAKE_CURRENT_LIST_DIR}/keygen.cpp
             ${CMAKE_CURRENT_LIST_DIR}/ntt.cpp
             ${CMAKE_CURRENT_LIST_DIR}/bfv.cpp
+            ${CMAKE_CURRENT_LIST_DIR}/bgv.cpp
             ${CMAKE_CURRENT_LIST_DIR}/ckks.cpp
     )
 
