Add CKKS/BFV Negate and Sub Ptxt/Ctxt benchmarks
Add benchmarks of high and low level NTT API

Add faster low level NTT benchmark

--- a/native/bench/CMakeLists.txt
+++ b/native/bench/CMakeLists.txt
@@ -57,6 +57,7 @@ if(SEAL_BUILD_BENCH)
         PRIVATE
             ${CMAKE_CURRENT_LIST_DIR}/bench.cpp
             ${CMAKE_CURRENT_LIST_DIR}/keygen.cpp
+            ${CMAKE_CURRENT_LIST_DIR}/ntt.cpp
             ${CMAKE_CURRENT_LIST_DIR}/bfv.cpp
             ${CMAKE_CURRENT_LIST_DIR}/ckks.cpp
     )
