Prevented HEXL properties from being populated into upstream.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -416,11 +416,11 @@ if(NOT BUILD_SHARED_LIBS)
     if(SEAL_USE_INTEL_HEXL)
         if(SEAL_BUILD_DEPS)
             add_dependencies(seal HEXL::hexl)
-            target_include_directories(seal PUBLIC
+            target_include_directories(seal PRIVATE
                 $<BUILD_INTERFACE:$<TARGET_PROPERTY:HEXL::hexl,INTERFACE_INCLUDE_DIRECTORIES>>)
             seal_combine_archives(seal HEXL::hexl)
-            target_compile_options(seal PUBLIC $<TARGET_PROPERTY:HEXL::hexl,INTERFACE_COMPILE_OPTIONS>)
-            target_link_options(seal PUBLIC $<TARGET_PROPERTY:HEXL::hexl,INTERFACE_LINK_OPTIONS>)
+            target_compile_options(seal PRIVATE $<TARGET_PROPERTY:HEXL::hexl,INTERFACE_COMPILE_OPTIONS>)
+            target_link_options(seal PRIVATE $<TARGET_PROPERTY:HEXL::hexl,INTERFACE_LINK_OPTIONS>)
         else()
             target_link_libraries(seal PUBLIC HEXL::hexl)
         endif()
