Renamed HEXL to hexl in pkgconfig.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -623,7 +623,7 @@ if(UNIX OR APPLE)
             set(SEAL_PKGCONFIG_ZSTD_REQUIRES_STRING "libzstd >= ${zstd_VERSION_MAJOR}")
         endif()
         if(SEAL_USE_INTEL_HEXL)
-            set(SEAL_PKGCONFIG_INTEL_HEXL_REQUIRES_STRING "HEXL >= ${HEXL_VERSION_MAJOR}")
+            set(SEAL_PKGCONFIG_INTEL_HEXL_REQUIRES_STRING "hexl >= ${HEXL_VERSION_MAJOR}")
             message(STATUS "Intel HEXL does not have a pkg-config file")
         endif()
     endif()
