Fix HEXL release build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -420,7 +420,9 @@ if(NOT BUILD_SHARED_LIBS)
                 $<BUILD_INTERFACE:$<TARGET_PROPERTY:HEXL::hexl,INTERFACE_INCLUDE_DIRECTORIES>>)
             target_compile_options(seal PRIVATE $<TARGET_PROPERTY:HEXL::hexl,INTERFACE_COMPILE_OPTIONS>)
             get_target_property(HEXL_INTERFACE_LINK_OPTIONS HEXL::hexl INTERFACE_LINK_OPTIONS)
-            target_link_libraries(seal INTERFACE ${HEXL_INTERFACE_LINK_OPTIONS})
+            if (NOT "${HEXL_INTERFACE_LINK_OPTIONS}" STREQUAL "HEXL_INTERFACE_LINK_OPTIONS-NOTFOUND")
+                target_link_libraries(seal INTERFACE ${HEXL_INTERFACE_LINK_OPTIONS})
+            endif()
             seal_combine_archives(seal HEXL::hexl)
         else()
             target_link_libraries(seal PUBLIC HEXL::hexl)
