--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -65,6 +65,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: intel/hexl
+          ref: v${{ env.HEXL_VER }}
           fetch-depth: 1
           path: hexl
 
