--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -62,17 +62,8 @@ jobs:
           clang --version
           which clang++
           which gcc
+          gcc --version
         continue-on-error: true
-      
-      - if: matrix.os == 'windows-latest'
-        run: |
-          export CXX=clang++
-          export C=clang
-      
-      - name: Check Env
-        run: |
-          echo "$CXX"
-          echo "$C"
 
       - name: Checkout hexl
         uses: actions/checkout@v2
