--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -43,13 +43,13 @@ jobs:
         shell: bash
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-10.15, windows-latest]
+        os: [ubuntu-20.04, macos-10.15, windows-2019]
         script: ${{ fromJson(needs.find-scripts.outputs.matrix) }}
         exclude:
           # Windows only supports static builds, don't build w/ shared
-          - os: windows-latest
+          - os: windows-2019
             script: config_2.sh
-          - os: windows-latest
+          - os: windows-2019
             script: config_6.sh
     runs-on: ${{ matrix.os }}
 
