revert back to last running CI

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -70,7 +70,6 @@ jobs:
       # - name: Archive results
       #   uses: actions/upload-artifact@v2
       #   with:
-      #     name: test_detail_${{ matrix.os }}_${{ matrix.script }}_${{ github.sha }}.xml
+      #     name: test_detail_${{ matrix.script }}_${{ github.sha }}.xml
       #     path: test_detail.xml
-      #     if-no-files-found: ignore
       #     retention-days: 30 # Maximum for free version
