--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -65,11 +65,6 @@ jobs:
           path: hexl
 
       - name: Run Config
-        run: ./.github/config-tests/${{ matrix.script }}
-
-      # - name: Archive results
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: test_detail_${{ matrix.script }}_${{ github.sha }}.xml
-      #     path: test_detail.xml
-      #     retention-days: 30 # Maximum for free version
+        run: |
+          set -xeuo pipefail
+          ./.github/config-tests/${{ matrix.script }}
