--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,15 +1,22 @@
 name: Build and Test
 on:
+  # Schedule run every week at 8AM UTC (midnight PST)
+  schedule:
+    - cron: '0 8 * * SUN'
+  
   # By default this will run when the activity type is "opened", "synchronize",
   # or "reopened".
   pull_request:
     branches:
       - main
+      - contrib
       - "[0-9]+.[0-9]+.[0-9]+" # Run on release branch, e.g. 1.2.0
+  
   # Run when protected branches are pushed to, e.g. via merge
   push:
     branches:
       - main
+      - contrib
       - "[0-9]+.[0-9]+.[0-9]+" # Run on release branch, e.g. 1.2.0
 
   # Manually run this workflow on any specified branch.
@@ -24,6 +31,7 @@ env:
   SEAL_VER: 3.7
 
 jobs:
+  # Grab tests from config-tests dir and format into JSON object to reuse in workflow
   find-scripts:
     runs-on: ubuntu-latest
     outputs:
@@ -36,6 +44,8 @@ jobs:
           matrix=$(python3 -c 'import os, json; print(json.dumps(os.listdir(".github/config-tests")))')
           echo $matrix
           echo "::set-output name=matrix::$matrix"
+  
+  # Execute scripts found in previous job
   config:
     needs: find-scripts
     defaults:
