--- a/dotnet/src/SEALNet.csproj.in
+++ b/dotnet/src/SEALNet.csproj.in
@@ -27,4 +27,8 @@
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
     <DefineConstants>$(DefineConstants);DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="@CMAKE_CURRENT_SOURCE_DIR@\dotnet\src\**\*.cs" />
+  </ItemGroup>
 </Project>
