Don't use dllimport/export for static linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -547,6 +547,7 @@ if(SEAL_BUILD_SEAL_C)
     seal_set_version(sealc)
     if(SEAL_BUILD_STATIC_SEAL_C)
         seal_set_version_filename(sealc)
+        add_compile_definitions(SEAL_BUILD_STATIC_SEAL_C)
     else()
         seal_set_soversion(sealc)
     endif()
